# life_cupy

./: .gitignore  PROBLEM.md  README.md  build.ps1  git_add_dry.cmd  git_autopush_main.cmd  main.py  pyproject.toml  requirements.txt  run.ps1  setup.cfg  task.md
src/life/: __init__.py  __main__.py
src/life/core/: __init__.py  cuda_kernels.py  life_engine.py  simple_kernels.py
src/life/gui/: __init__.py  button2.py  gl_widget.py  main_window.py
src/life/utils/: __init__.py  config.py
